<resources>
    <string name="app_name">TaskList</string>
    <string name="task_added">Task added successful</string>
    <string name="task_removed">Task removed</string>
    <string name="add_task">Add Task</string>
    <string name="task_title">Task Title</string>
    <string name="task_time">Time</string>
    <string name="pm">PM</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
    <string name="task_list">Task List</string>
    <string name="pending">Pending</string>
    <string name="assigned">Assigned</string>
    <string name="completed">Completed</string>
    <string name="sort_by_date">Sort by date</string>
    <string name="new_to_old">New to old</string>
    <string name="old_to_new">Old to new</string>
    <string name="ok">Ok</string>
    <string name="warning">Warning</string>
   <!-- error message-->
    <string name="error_task_name">Enter the task name.</string>
    <string name="error_task_time">Enter the task time.</string>
    <string name="delete_warning">Do you want to delete “Classification”, this action can’t be undone.</string>
    <string name="no_task_assigned">No Task Assigned</string>

</resources>