<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginHorizontal="30dp"
    android:minHeight="160dp"
    android:padding="8dp">

    <TextView
        android:id="@+id/tvlwarning"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:fontFamily="@font/robotomedium"
        android:text="@string/warning"
        android:textColor="@color/text_global_color"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tvl_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginTop="20dp"
        android:fontFamily="@font/robotoregular"
        android:padding="3dp"
        android:text="@string/delete_warning"
        android:textColor="@color/grey_color"
        android:textSize="14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvlwarning" />

    <TextView
        android:id="@+id/ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/customripple"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="10dp"
        android:padding="6dp"
        android:text="@string/ok"
        android:textColor="@color/alrtok"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/tvl_description" />

    <TextView
        android:id="@+id/Cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/customripple"
        android:layout_marginEnd="27dp"
        android:layout_marginBottom="10dp"
        android:padding="6dp"
        android:text="@string/cancel"
        android:textColor="@color/alrtok"
        android:textSize="15sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/ok" />


</androidx.constraintlayout.widget.ConstraintLayout>