<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.AddTask">

<androidx.appcompat.widget.AppCompatImageView
    android:id="@+id/ivBack"
    android:layout_width="25dp"
    android:layout_height="25dp"
    style="@style/customripple"
    android:src="@drawable/icon"
    android:padding="2dp"
    app:layout_constraintTop_toTopOf="parent"
    app:layout_constraintStart_toStartOf="parent"
    android:layout_marginTop="16dp"
    android:layout_marginStart="16dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        app:layout_constraintTop_toTopOf="@+id/ivBack"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        android:layout_marginStart="16dp"
        android:textSize="20sp"
        android:fontFamily="@font/robotomedium"
        android:textColor="@color/text_global_color"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tasknameinput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/ivBack"
        android:layout_marginTop="25dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:hint="@string/task_title"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ettasname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLength="30"
            android:inputType="text"
           />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tasktimeinput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintTop_toBottomOf="@+id/tasknameinput"
        android:layout_marginTop="20dp"
        android:clickable="true"
        android:focusable="false"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/taskam"
        android:hint="@string/task_time"
        android:layout_marginStart="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ettasktime"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="text"

            />
    </com.google.android.material.textfield.TextInputLayout>


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/taskam"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:focusable="false"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:layout_constraintStart_toEndOf="@+id/tasktimeinput"
        app:layout_constraintTop_toTopOf="@+id/tasktimeinput"
        app:layout_constraintBottom_toBottomOf="@+id/tasktimeinput"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginHorizontal="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/ettaskam"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="false"
           android:text="@string/pm"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="@+id/tasktimeinput"
        app:layout_constraintTop_toBottomOf="@+id/tasktimeinput">

        <TextView
            android:id="@+id/btnCancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/customripple"
            android:layout_marginTop="16dp"
            android:background="@drawable/cancel_shape"
            android:minWidth="110dp"
            android:focusable="true"
            android:clickable="true"
            android:gravity="center_horizontal"
            android:text="@string/cancel"
            android:paddingVertical="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:textColor="@color/blue" />

        <TextView
            android:id="@+id/btnadd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/customripple"
            android:layout_marginTop="16dp"
            android:layout_marginStart="10dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btnCancel"
            android:background="@drawable/add_shape"
            android:paddingHorizontal="20dp"
            android:paddingVertical="10dp"
            android:text="@string/add"
            android:textColor="@color/white" />

    </androidx.constraintlayout.widget.ConstraintLayout>




</androidx.constraintlayout.widget.ConstraintLayout>